--- a/src/app/pages/temperature/temperature.page.html
+++ b/src/app/pages/temperature/temperature.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>temperature</ion-title>
+    <ion-buttons slot="start">
+      <ion-icon name="arrow-back" style="font-size: 2rem;" (click)="goBack()"></ion-icon>
+    </ion-buttons>
+    <ion-title>Temperature</ion-title>
   </ion-toolbar>
 </ion-header>
 
