(feat): add content for luminosity page

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,5 +17,12 @@
         Temperature
       </ion-card-content>
     </ion-card>
+
+    <ion-card>
+      <ion-card-content style="text-align: center; font-size: 2rem;" (click)="goToLumPage()">
+        <ion-icon name="sunny" color="secondary"></ion-icon>
+        Luminosity
+      </ion-card-content>
+    </ion-card>
   </p>
 </ion-content>
