(feat): add content for humidity page

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -14,14 +14,21 @@
     <ion-card>
       <ion-card-content style="text-align: center; font-size: 2rem;" (click)="goToTempPage()">
         <ion-icon name="thermometer" color="primary"></ion-icon>
-        Temperature
+        Temperatura
       </ion-card-content>
     </ion-card>
 
     <ion-card>
       <ion-card-content style="text-align: center; font-size: 2rem;" (click)="goToLumPage()">
         <ion-icon name="sunny" color="secondary"></ion-icon>
-        Luminosity
+        Luminosidade
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-content style="text-align: center; font-size: 2rem;" (click)="goToHumidityPage()">
+        <ion-icon name="water" color="tertiary"></ion-icon>
+        Umidade
       </ion-card-content>
     </ion-card>
   </p>
