--- a/src/app/pages/humidity/humidity.page.html
+++ b/src/app/pages/humidity/humidity.page.html
@@ -20,6 +20,15 @@
       </ion-card-content>
     </ion-card>
 
+    <div style="text-align: center;" class="content">
+      <div style = "position:relative; float: left; padding-left: 4rem;">
+        Min: {{dweet._with[0].content.humidMin}} %
+      </div>
+      <div style = "position:relative; float: right; padding-right: 4rem;">
+        Max: {{dweet._with[0].content.humidMax}} %
+      </div>
+    </div>
+
     <div style="text-align: center;">
       <p>
       <ion-icon name="calendar" color="primary"></ion-icon>
