--- a/src/app/pages/luminosity/luminosity.page.html
+++ b/src/app/pages/luminosity/luminosity.page.html
@@ -29,6 +29,10 @@
       </div>
     </div>
 
+    <div style="text-align: center; margin-top: 3.5rem;">
+      Buzzer: {{dweet._with[0].content.status_buzzer}}
+    </div>
+
     <div style="text-align: center;">
       <p>
       <ion-icon name="calendar" color="primary"></ion-icon>
