--- a/src/app/pages/temperature/temperature.page.html
+++ b/src/app/pages/temperature/temperature.page.html
@@ -20,6 +20,19 @@
       </ion-card-content>
     </ion-card>
 
+    <div style="text-align: center;" class="content">
+      <div style = "position:relative; float: left; padding-left: 4rem;">
+        Min: {{dweet._with[0].content.tempMin}} ºC
+      </div>
+      <div style = "position:relative; float: right; padding-right: 4rem;">
+        Max: {{dweet._with[0].content.tempMax}} ºC
+      </div>
+    </div>
+
+    <div style="text-align: center; margin-top: 3.5rem;">
+        LED: {{dweet._with[0].content.current_color}}
+    </div>
+
     <div style="text-align: center;">
       <p>
       <ion-icon name="calendar" color="primary"></ion-icon>
